# tmd-viewer

./: .gitignore  Cargo.toml  build.rs  readme.md  rustfmt.toml  tmd-viewer.yaml
src/: create_index_feeds_feeds_at.sql  create_index_feeds_ids.sql  create_index_feeds_ids_un.sql  create_index_media_feed_id.sql  create_index_media_ids.sql  create_index_media_unique.sql  create_table_feeds.sql  create_table_files.sql  create_table_media.sql  main.rs  server.rs  service.rs  worker.rs
static/: darklight.js  fluent-web.min.js  index.css  index.html  index.mjs  labels.en.ftl  labels.ja.ftl  linkify-element.min.js
