[package]
name = "tmd-viewer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tmd-viewer"
path = "src/main.rs"

[target.'cfg( target_os = "windows" )']
[[bin]]
name = "tmd-viewer-service"
path = "src/service.rs"

[dependencies]
actix-web = "3"
actix-files = "0.5"
base64 = "0.13.0"
bytes = "1"
chrono = "0.4.19"
clap = { version = "3.1.6", features = ["derive"] }
csv = "1.1"
futures = "0.3"
image = "0.24.1"
mime = "0.3.16"
r2d2 = "0.8.9"
r2d2_sqlite = "0.19.0"
regex = "1.5.4"
rusqlite = { version = "0.26.3", features = ["bundled", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
time = "0.3.7"
zip = "0.5.13"

[target.'cfg( target_os = "windows" )'.dependencies]
windows-service = "0.4.0"